Make java.desktop optional so the module resolves without it
DeviceCodePrompt.openBrowser() promises the browser launch is skipped
"on a runtime without the java.desktop module" and never prevents
sign-in, and BrowserLauncher is kept in its own class, referenced behind
a LinkageError catch, precisely to keep that promise. module-info.java
then undid it: a mandatory `requires java.desktop` is satisfied during
module RESOLUTION, before a line of client code runs, so on a runtime
image without java.desktop - a jlink image, a --limit-modules run - the
JVM failed at startup with FindException and the catch never got the
chance to degrade to "print the URL and carry on".

The published artifact is built on JDK 8 and carries no descriptor, so it
is an automatic module and was never affected. A build from this source
used as an explicit module is, which is what this changes:
`requires static java.desktop` makes the dependency compile-time only,
and java.desktop's absence arrives as the NoClassDefFoundError that catch
already handles. java.awt.Desktop in BrowserLauncher is the module's only
java.desktop reference, so nothing else moves.

One consequence is documented rather than left to be discovered: a static
requires is NOT followed during runtime resolution, so an application
running this client as an explicit module gets the browser launch only
when java.desktop is in its own graph anyway - it requires it, or the
launch adds it. Class-path applications are unaffected, java.desktop
being resolved by default there. That note is in the openBrowser()
javadoc, the module-info comment and the README paragraph that makes the
same promise to users.

The new test runs a second JVM with the client on the MODULE path under
--limit-modules io.questdb.client, which limits the universe to the
client plus the closure of its MANDATORY requires. A static requires is
not in that closure, so the child is genuinely desktop-free and proves
three things: the module resolved without java.deskt